# Digitales_3

./: .gitignore  README.md
Lab1/: .gitattributes  .gitignore  AES.c  Doxyfile  README.md  main.c
Lab1/TextFiles/: encripted.txt  text.txt
Lab1/include/: AES_Func.c  AES_Func.h
Lab1/src/: main.c
Lab1/src/html/: _a_e_s___func_8c.html  _a_e_s___func_8h.html  _a_e_s___func_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dbc64af3de50f21dd0d1af95d9f4e946.html  doxygen.css  doxygen_crawl.html  files.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8c.html  mainpage.dox  menudata.js
Lab1/src/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  files_0.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  pages_2.js  pages_3.js  searchdata.js  typedefs_0.js  variables_0.js
Lab2/: CMakeLists.txt  Doxyfile  README.md  mainpage.dox
Lab2/include/: libs.h  main.h
Lab2/src/: libs.c  main.c
Lab3/: CMakeLists.txt  Doxyfile  README.md  mainpage.dox
Lab3/include/: Access.h  LEDS_LIB.h  State_machine.h  fsm.h  libs.h  mat.h
Lab3/src/: Access.c  LEDS_LIB.c  State_machine.c  fsm.c  libs.c  main.c  mat.c  test.c
Lab4/: Doxyfile  README.md  mainpage.dox
Lab4/Arduino/: Arduino.ino  Doxyfile  README.md  mainpage.dox  page_ard.dox
Lab4/Arduino/src/7_seg/: 7_seg.cpp  7_seg.h
Lab4/Arduino/src/detect_pwm/: detect_pwm.cpp  detect_pwm.h
Lab4/C_Interrupt/: CMakeLists.txt  Doxyfile  README.md  mainpage.dox  page_int.dox
Lab4/C_Interrupt/include/: 7_seg.h  detect_pwm.h  globals.h  pwm.h
Lab4/C_Interrupt/src/: 7_seg.c  detect_pwm.c  main.c  pwm.c
Lab4/C_Polling/: CMakeLists.txt  Doxyfile  README.md  mainpage.dox  page_pol.dox
Lab4/C_Polling/include/: 7_seg.h  detect_pwm.h
Lab4/C_Polling/src/: 7_seg.c  detect_pwm.c  main.c
Lab4/C_Polling_Interrupt/: CMakeLists.txt  Doxyfile  README.md  mainpage.dox  page_pol_int.dox
Lab4/C_Polling_Interrupt/include/: 7_seg.h  detect_pwm.h  globals.h
Lab4/C_Polling_Interrupt/src/: 7_seg.c  detect_pwm.c  main.c
Lab4/MicroPython/: Doxyfile  README.md  main.py  mainpage.dox  page_micro.dox
Lab4/MicroPython/lib/: detect_pwm.py  seg_7.py
Lab4/PWM_output/: CMakeLists.txt  Doxyfile  README.md  main.c  page_pwm.dox
Tarea_1/ADC/: ADC.H  Doxyfile  README.md  mainpage.dox
Tarea_1/SHA256/: README.md  SHA256.h  config_file  doxyfile  titlescreen.dox
